modified a couple of things

--- a/DI-App/Controllers/login/Login.xib
+++ b/DI-App/Controllers/login/Login.xib
@@ -162,30 +162,45 @@
                     <subviews>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3ur-K1-Fu2">
                             <rect key="frame" x="0.0" y="0.0" width="367" height="50"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="RDr-3H-PeZ"/>
+                            </constraints>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="25"/>
                             <textInputTraits key="textInputTraits" keyboardType="emailAddress" enablesReturnKeyAutomatically="YES" textContentType="email"/>
                         </textField>
                         <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="A5S-Wu-PuD">
                             <rect key="frame" x="0.0" y="75" width="367" height="50"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="wZf-iN-L9t"/>
+                            </constraints>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="25"/>
                             <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" textContentType="name"/>
                         </textField>
                         <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bGo-CR-fPY">
                             <rect key="frame" x="0.0" y="150" width="367" height="50"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="O1i-7f-sAY"/>
+                            </constraints>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="25"/>
                             <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" textContentType="family-name"/>
                         </textField>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="LinkedIn" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dSP-GN-MmB">
                             <rect key="frame" x="0.0" y="225" width="367" height="50"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="fNh-IU-rWi"/>
+                            </constraints>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="25"/>
                             <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" textContentType="url"/>
                         </textField>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bFf-8R-vr9">
                             <rect key="frame" x="0.0" y="300" width="367" height="50"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="99Y-Pz-H4n"/>
+                            </constraints>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="25"/>
                             <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" textContentType="tel"/>
@@ -196,9 +211,6 @@
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o9L-aR-hd1">
                                     <rect key="frame" x="0.0" y="0.0" width="367" height="50"/>
                                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="50" id="he3-hA-FpB"/>
-                                    </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                     <state key="normal" title="Select Your Ctiy">
                                         <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -257,9 +269,6 @@
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bfz-Fe-een">
                                     <rect key="frame" x="0.0" y="0.0" width="367" height="50"/>
                                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="50" id="rNW-mA-BEv"/>
-                                    </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                     <state key="normal" title="Select Your Program">
                                         <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -320,6 +329,9 @@
                         </textView>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="9Zo-N9-URM">
                             <rect key="frame" x="0.0" y="675" width="367" height="50"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="eb4-gO-NfB"/>
+                            </constraints>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="25"/>
                             <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" textContentType="password"/>
@@ -331,6 +343,7 @@
                         <constraint firstItem="dSP-GN-MmB" firstAttribute="leading" secondItem="O7W-Q5-eKg" secondAttribute="leading" id="64i-3H-D0Y"/>
                         <constraint firstAttribute="trailing" secondItem="m50-3w-G2j" secondAttribute="trailing" id="6ZE-ur-qsH"/>
                         <constraint firstAttribute="trailing" secondItem="3ur-K1-Fu2" secondAttribute="trailing" id="8yw-pp-ODy"/>
+                        <constraint firstItem="o9L-aR-hd1" firstAttribute="top" secondItem="bFf-8R-vr9" secondAttribute="bottom" constant="25" id="Ga8-oP-uHc"/>
                         <constraint firstAttribute="trailing" secondItem="zlf-hZ-oS4" secondAttribute="trailing" id="JWZ-5m-A0v"/>
                         <constraint firstItem="A5S-Wu-PuD" firstAttribute="leading" secondItem="O7W-Q5-eKg" secondAttribute="leading" id="OYI-l1-wxS"/>
                         <constraint firstItem="bFf-8R-vr9" firstAttribute="leading" secondItem="O7W-Q5-eKg" secondAttribute="leading" id="QkM-xb-pTL"/>
@@ -339,10 +352,13 @@
                         <constraint firstItem="Ibv-jH-4qa" firstAttribute="leading" secondItem="O7W-Q5-eKg" secondAttribute="leading" id="dY3-cG-5gA"/>
                         <constraint firstAttribute="trailing" secondItem="Ibv-jH-4qa" secondAttribute="trailing" id="eqM-87-WMu"/>
                         <constraint firstItem="9Zo-N9-URM" firstAttribute="leading" secondItem="O7W-Q5-eKg" secondAttribute="leading" id="gGg-Ha-EWj"/>
+                        <constraint firstItem="2GY-ZZ-48I" firstAttribute="top" secondItem="Bfz-Fe-een" secondAttribute="bottom" constant="25" id="gZP-H2-bDm"/>
                         <constraint firstAttribute="trailing" secondItem="9Zo-N9-URM" secondAttribute="trailing" id="gaQ-OO-SCK"/>
                         <constraint firstItem="3ur-K1-Fu2" firstAttribute="leading" secondItem="O7W-Q5-eKg" secondAttribute="leading" id="hi8-Nb-MAk"/>
                         <constraint firstItem="bGo-CR-fPY" firstAttribute="leading" secondItem="O7W-Q5-eKg" secondAttribute="leading" id="nEE-Yu-13n"/>
                         <constraint firstAttribute="trailing" secondItem="bFf-8R-vr9" secondAttribute="trailing" id="o4F-D9-uI7"/>
+                        <constraint firstItem="zlf-hZ-oS4" firstAttribute="top" secondItem="2GY-ZZ-48I" secondAttribute="bottom" constant="25" id="plX-HS-cbe"/>
+                        <constraint firstItem="Bfz-Fe-een" firstAttribute="top" secondItem="o9L-aR-hd1" secondAttribute="bottom" constant="25" id="s9R-03-lNQ"/>
                         <constraint firstAttribute="trailing" secondItem="2GY-ZZ-48I" secondAttribute="trailing" id="sHF-oH-sV9"/>
                         <constraint firstItem="m50-3w-G2j" firstAttribute="leading" secondItem="O7W-Q5-eKg" secondAttribute="leading" id="wPm-DR-GNk"/>
                         <constraint firstAttribute="trailing" secondItem="dSP-GN-MmB" secondAttribute="trailing" id="zY8-Mw-zyb"/>
