--- a/DI-App/Base.lproj/LaunchScreen.storyboard
+++ b/DI-App/Base.lproj/LaunchScreen.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,14 +19,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="laucnh" translatesAutoresizingMaskIntoConstraints="NO" id="x68-fE-eRP">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="x68-fE-eRP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="I8R-MH-Dbp"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="x68-fE-eRP" secondAttribute="trailing" id="X28-lz-ym8"/>
-                            <constraint firstItem="x68-fE-eRP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="o8t-Zc-HlM"/>
+                            <constraint firstItem="x68-fE-eRP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="-20" id="o8t-Zc-HlM"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="x68-fE-eRP" secondAttribute="bottom" id="q8L-T1-AW1"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -33,7 +34,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
     <resources>
